force-app/main/default/objects/B2B_Order_Document_Request__c/B2B_Order_Document_Request__c.object-meta.xml
<CustomObject>
    <label>B2B Order Document Request</label>
    <nameField>
        <displayFormat>ODR-{000000}</displayFormat>
        <label>B2B Order Document Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B2B Order Document Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>