force-app/main/default/objects/B2B_Order_Document_Request__c/fields/B2B_Document_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Document_Request_Type__c</fullName>
    <label>B2B Document Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Delivery Note</fullName>
            </value>
            <value>
                <fullName>Order Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>