force-app/main/default/objects/B2B_Order_Document_Request__c/fields/B2B_ERP_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_ERP_Order_Number__c</fullName>
    <formula>B2b_Order__r.B2B_ERP_Order_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Order Number</label>
    <type>Text</type>
</CustomField>