force-app/main/default/objects/B2B_Order_Document_Request__c/fields/B2b_Order__c.field-meta.xml
<CustomField>
    <fullName>B2b_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>B2b Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>B2B Order Document Requests</relationshipLabel>
    <relationshipName>B2B_Order_Document_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>