force-app/main/default/objects/B2B_Order_Document_Request__c/fields/B2B_Request_User__c.field-meta.xml
<CustomField>
    <fullName>B2B_Request_User__c</fullName>
    <formula>B2b_Order__r.Account.k_ARIS_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request User</label>
    <type>Text</type>
</CustomField>