force-app/main/default/objects/B2B_Order_Document_Request__c/fields/B2B_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>B2B_Timestamp__c</fullName>
    <label>Timestamp of Request done</label>
    <type>DateTime</type>
</CustomField>